--- a/style.css
+++ b/style.css
@@ -5,16 +5,18 @@ body {
 
 .hey {
   background-color: white;
-  border: 5px solid black;
+  font-size: 18pt;
+  color: rgb(5, 101, 165);
+  border: 5px solid rgb(207,207,207);
   padding: 10px;
   margin: 50px auto 10px auto;
   font-family: Helvetica;  /* add more*/
-  width: 650px;
+  width: 960px;
   border-radius: 10px;
 }
 
 .box {
-  background-color: lightgray;
+  /*background-color: blue;*/
   height: 100px;
   width: 400px;
   margin: 10px auto 20px auto;
@@ -22,8 +24,8 @@ body {
 }
 
 .container {
-  background-color: grey;
-  border: 5px solid black;
+  background-color: white;
+  border: 3px solid grey;
   width: 1000px;
   height: 600px;
   margin: 0px auto 0px auto;
