--- a/style.css
+++ b/style.css
@@ -16,7 +16,6 @@ body {
 }
 
 .box {
-  /*background-color: blue;*/
   height: 100px;
   width: 400px;
   margin: 10px auto 20px auto;
@@ -32,11 +31,6 @@ body {
   border-radius: 10px;
 }
 
-/*.entryBox {
-  margin-left: 50px;
-  padding: 20px 10px 20px 10px;
-}*/
-
 .draft {
   margin: 30px 10px 0px 10px;
   padding: 10px;
@@ -44,6 +38,13 @@ body {
   border-radius: 5px;
 }
 
-.image {}
+.photo {
+  width: 50vw;
+  height: 50vw;
+  display: inline-block;
+  position: relative;
+}
 
-.text {}
+.text {
+
+}
